# PB_2025_equipe2

./: .gitignore  CMakeLists.txt  PID.c  README.md  package.xml  platformio.ini
catkin_ws/src/PB_2025/: CMakeLists.txt  package.xml
catkin_ws/src/PB_2025/src/: odometria.py
launch/: robot.launch
lib/I2C/: I2C.c  I2C.h
lib/PID/: PID.c  PID.h
lib/comunicacao/: uart_esp32.c  uart_esp32.h  uart_rasp.py
lib/encoder/: encoder.c  encoder.h
lib/h_bridge/: h_bridge.c  h_bridge.h
lib/visao/: visao.py
lib/visao_nav/: navlib.py  visao_teste.py  vlib.py
rasp-codes-(ROS)/: navigation_node.py  vision_node.py
rasp-codes-(teste)/: visao.py  vlib.py
ros_nodes/: hardware_interface.py  navigation_node.py  vision_node.py
scripts/: hardware_interface.py  vision_node.py
src/: main.c
visao/: visao.py  vlib.py
