<?xml version="1.0"?>
<package format="2">
  <name>proj_bixos</name>
  <version>0.0.1</version>
  <description>Pacote de visão e navegação para o robô</description>

  <maintainer email="artur@example.com">Artur</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>
